fix z-index and scroll lock

--- a/styles/burger.css
+++ b/styles/burger.css
@@ -12,10 +12,12 @@
     background-color: whitesmoke;
     border-radius: 4px;
     opacity: 0.9;
-    height: 100%;
+    height: 100vh;
+
 }
 .menu_list.active {
     right: 0;
+    z-index: 10;
 }
 
 .menu_burger-icon {
@@ -24,6 +26,9 @@
     right: 30px;
     display: none;
     cursor: pointer;
+}
+.menu_burger-icon.active {
+    z-index: 11;
 }
 .burger-icon_line {
     display: block;
@@ -36,6 +41,7 @@
 @media screen and (max-width: 768px) {
     .menu_burger-icon {
         display: block;
+
     }
     .menu_burger-icon.active .burger-icon_line:nth-child(2) {
         opacity: 0;
@@ -46,4 +52,7 @@
     .menu_burger-icon.active .burger-icon_line:nth-child(3) {
         transform: translateY(-6px) rotate(-45deg);
     }
+}
+.lock {
+    overflow: hidden;
 }
